create account component and display account data and currency on page, change service file location

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
 </style>
 
 <div>
-  <h1>My Wallet</h1>
+  <h1>My Account</h1>
+  <app-account></app-account>
   <app-transactions></app-transactions>
+
 </div>
