--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -25,14 +25,16 @@
 
 </style>
 
-<h2>Account</h2>
-<div class="account">
-  <div class="account__column">
-    <span class="account__name">{{account.name}}</span>
-    <span>{{account.iban}}</span>
-  </div>
-  <div class="account__column">
-    <span>{{currency}}</span>
-    <span class="account__balance">{{account.balance}}</span>
+<div *ngIf="account">
+  <h2>Account</h2>
+  <div class="account">
+    <div class="account__column">
+      <span class="account__name">{{account.name}}</span>
+      <span>{{account.iban}}</span>
+    </div>
+    <div class="account__column">
+      <span>{{currency}}</span>
+      <span class="account__balance">{{account.balance}}</span>
+    </div>
   </div>
 </div>
